update configure-aws-credentials@v4 configuration

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::246386308913:role/eks-auto
+          role-to-assume: arn:aws:iam::246386308913:role/eks-federated-deployer
           role-session-name: eksdeployersession
           aws-region: ${{ env.AWS_REGION }}
       - name: Install kubectl
