update configure-aws-credentials@v4, add id-token: write config

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      #contents: read
 
     steps:
       - name: Checkout code
@@ -42,6 +45,7 @@ jobs:
           role-to-assume: arn:aws:iam::246386308913:role/eks-federated-deployer
           role-session-name: eksdeployersession
           aws-region: ${{ secrets.AWS_REGION }}
+
       - name: Install kubectl
         run: |
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
