--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-#
-#    steps:
+
+    steps:
 #      - name: Checkout code
 #        uses: actions/checkout@v4
 #
