--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -70,8 +70,9 @@ jobs:
           aws sts get-caller-identity
 
       - name: Deploy to EKS
-        run: kubectl apply -f k8s/deployment.yaml
-
+        run: |
+          cd k8s
+          kubectl apply -f deployment.yaml
 #      - name: Validate kubeconfig and Test kubectl Configuration
 #        run: |
 #          # Print the kubeconfig file content
