--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -12,8 +12,8 @@ jobs:
       id-token: write
 
     steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 #
 #      - name: Set up Docker Build
 #        uses: docker/setup-buildx-action@v3
