--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -82,7 +82,7 @@ jobs:
       - name: List files and directories in the current directory
         run: ls -R
       - name: Deploy to EKS
-        run: kubectl apply -f k8s/deployment.yaml
+        run: kubectl apply --validate=false -f k8s/deployment.yaml
 #      - name: Validate kubeconfig and Test kubectl Configuration
 #        run: |
 #          # Print the kubeconfig file content
