--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -18,11 +18,11 @@ jobs:
 #      - name: Set up Docker Build
 #        uses: docker/setup-buildx-action@v3
 #
-#      - name: Log in to Docker Hub
-#        uses: docker/login-action@v3
-#        with:
-#          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-#          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 #
 #      - name: Build, tag, and push image to Docker Hub
 #        env:
@@ -57,8 +57,8 @@ jobs:
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
 
-      - name: Create kube-config directory
-        run: mkdir -p $HOME/.kube
+#      - name: Create kube-config directory
+#        run: mkdir -p $HOME/.kube
 
       - name: Decode and set kubeconfig
         env:
@@ -81,25 +81,13 @@ jobs:
         run: aws sts get-caller-identity  # Check AWS CLI setup
 
 
-#      - name: Verify kubectl Configuration
-#        run: |
-#          kubectl config view  # Show kubectl config
-#          kubectl config current-context  # Show current context
-#          kubectl get nodes  # List Kubernetes nodes to verify connection
+      - name: Print current working directory
+        run: pwd
 
-      - name: Generate Kubernetes Deployments
-        env:
-          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-          DOCKER_HUB_REPOSITORY: ${{ secrets.DOCKER_HUB_REPOSITORY }}
-          IMAGE_TAG: latest
-        run: |
-          cat k8s/deployment.yaml.template | envsubst > k8s/deployment.yaml
-          cat k8s/service.yaml.template | envsubst > k8s/service.yaml
-
+      - name: List files and directories in the current directory
+        run: ls -R
       - name: Deploy to EKS
-        run: |
-          kubectl apply --validate=false -f k8s/deployment.yaml
-          kubectl apply --validate=false -f k8s/service.yaml
+        run: kubectl apply --validate=false -f k8s/deployment.yaml
 #      - name: Validate kubeconfig and Test kubectl Configuration
 #        run: |
 #          # Print the kubeconfig file content
