--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -57,8 +57,8 @@ jobs:
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
 
-#      - name: Create kube-config directory
-#        run: mkdir -p $HOME/.kube
+      - name: Create kube-config directory
+        run: mkdir -p $HOME/.kube
 
       - name: Decode and set kubeconfig
         env:
