--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -14,30 +14,30 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-#
-#      - name: Set up Docker Build
-#        uses: docker/setup-buildx-action@v3
-#
+
+      - name: Set up Docker Build
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-#
-#      - name: Build, tag, and push image to Docker Hub
-#        env:
-#          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-#          DOCKER_HUB_REPOSITORY: ${{ secrets.DOCKER_HUB_REPOSITORY }}
-#        run: |
-#          IMAGE_TAG=latest
-#          REPOSITORY_URI=${DOCKER_HUB_USERNAME}/${DOCKER_HUB_REPOSITORY}
-#
-#          # Build the Docker image
-#          docker build -t $REPOSITORY_URI:$IMAGE_TAG .
-#
-#          # Push the image to Docker Hub
-#          docker push $REPOSITORY_URI:$IMAGE_TAG
-#
+
+      - name: Build, tag, and push image to Docker Hub
+        env:
+          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+          DOCKER_HUB_REPOSITORY: ${{ secrets.DOCKER_HUB_REPOSITORY }}
+        run: |
+          IMAGE_TAG=latest
+          REPOSITORY_URI=${DOCKER_HUB_USERNAME}/${DOCKER_HUB_REPOSITORY}
+
+          # Build the Docker image
+          docker build -t $REPOSITORY_URI:$IMAGE_TAG .
+
+          # Push the image to Docker Hub
+          docker push $REPOSITORY_URI:$IMAGE_TAG
+
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -45,11 +45,6 @@ jobs:
           role-session-name: eks-deployer-temporal-session
           aws-region: ${{ secrets.AWS_REGION }}
 
-#      - name: Configure AWS Credentials
-#        run: |
-#          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          aws configure set default.region ${{ secrets.AWS_REGION }}
       - name: Create kube-config directory
         run: mkdir -p $HOME/.kube
 
@@ -65,9 +60,6 @@ jobs:
           sudo mv kubectl /usr/local/bin/
           kubectl version
 
-#      - name: Set KUBECONFIG environment variable
-#        run: echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
-
       - name: Validate AWS Configuration
         run: |
           which aws
@@ -77,20 +69,16 @@ jobs:
       - name: Deploy to EKS
         run: kubectl apply --validate=false -f k8s/deployment.yaml
 
-#      - name: Validate kubeconfig and Test kubectl Configuration
-#        run: |
-#          # Print the kubeconfig file content
-#          cat $HOME/.kube/config
-#          # Test kubectl configuration
-#          kubectl config get-contexts
-#          kubectl config use-context arn:aws:eks:us-east-1:246386308913:cluster/eks-cluster
-#          kubectl cluster-info
-#
-#      - name: Update Kubernetes deployment
-#        env:
-#          #KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-#          DOCKER_IMAGE_URI: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
-#          K8S_DEPLOYMENT_NAME: ${{ secrets.K8S_DEPLOYMENT_NAME }}
-#          K8S_NAMESPACE: ${{ secrets.K8S_NAMESPACE }}
-#        run: |
-#          kubectl set image deployment/$K8S_DEPLOYMENT_NAME *=$DOCKER_IMAGE_URI -n $K8S_NAMESPACE
+      - name: Check Installation
+        run: |
+          # Check pods related to deployment
+          kubectl get pods -l app=marco-polo
+          
+          # Describe the deployment in detail
+          kubectl describe deployment marco-polo
+          
+          # Wait for 10 seconds
+          sleep 10
+          
+          # View pod start up logs
+          kubectl logs -l app=marco-polo
