--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -38,6 +38,14 @@ jobs:
           # Push the image to Docker Hub
           docker push $REPOSITORY_URI:$IMAGE_TAG
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -80,5 +88,5 @@ jobs:
           # Wait for 10 seconds
           sleep 10
           
-          # View pod start up logs
+          # View pod start-up logs
           kubectl logs -l app=marco-polo
