--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      id-token: write
+      id-token: write  #allows creation of a OIDC token
 
     steps:
       - name: Checkout code
@@ -41,6 +41,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      id-token: write #allows creation of a OIDC token
 
     steps:
       - name: Checkout code
