--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - main  # or any branch you want to trigger the build from
 
 jobs:
-  build:
+  build: # <-- This is the job ID `build`
     runs-on: ubuntu-latest
     permissions:
       id-token: write  # allows creation of an OIDC token
@@ -38,12 +38,12 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Amazon ECR
-        id: login-ecr
+        id: login-ecr # <-- This is the job ID `build`
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build, tag, and push image to ECR
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }} # <-- This takes from the outputs of login-ecr the variable registry
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
@@ -54,4 +54,4 @@ jobs:
 
       - name: Output Image URI for downstream jobs
         id: image-details
-        run: echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        run: echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" # <-- This export the variable build.outputs.image see at the start of the job
