--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,3 +55,6 @@ jobs:
       - name: Output Image URI for downstream jobs
         id: image-details
         run: echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" # <-- This export the variable build.outputs.image see at the start of the job
+
+    outputs:
+      image: ${{ steps.image-details.outputs.image }}
