--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -1,9 +1,5 @@
 name: Build and Push to ECR Steps
 
-on:
-  workflow_call:
-    secrets: inherit
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,7 +29,7 @@ jobs:
         run: |
           aws ecr describe-repositories --repository-names ${{ secrets.ECR_REPOSITORY }} --region ${{ secrets.AWS_REGION }} || aws ecr create-repository --repository-name ${{ secrets.ECR_REPOSITORY }} --region ${{ secrets.AWS_REGION }}
 
-      - name: Set up Docker Build
+      - name: Set up Docker Build|
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Amazon ECR
