Change workflow implementation to use different files for each step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ on:
       - main
 
 jobs:
+  permissions:
+    id-token: write  # allows creation of an OIDC token
+    contents: read
   build:
     uses: ./.github/workflows/build-steps.yml
 
