--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::246386308913:role/eks-federated-deployer
           role-session-name: eks-deployer-temporal-session
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ${AWS_REGION}
 
       - name: Create ECR Repository if it doesn't exist
         run: |
