--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   set-environment:
+    runs-on: ubuntu-latest
     steps:
       - name: Set ENV Variables
         run: echo "Setting ENV variables"
