--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,49 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-
   build:
-    needs: set-environment
-    permissions:
-      id-token: write  # allows creation of an OIDC token
-      contents: read
-    uses: ./.github/workflows/build-steps.yml
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::246386308913:role/eks-federated-deployer
+          role-session-name: eks-deployer-temporal-session
+          aws-region: ${AWS_REGION}
+
+      - name: Create ECR Repository if it doesn't exist
+        run: |
+          aws ecr describe-repositories --repository-names ${{ secrets.ECR_REPOSITORY }} --region ${{ secrets.AWS_REGION }} || aws ecr create-repository --repository-name ${{ secrets.ECR_REPOSITORY }} --region ${{ secrets.AWS_REGION }}
+
+      - name: Set up Docker Build|
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Amazon ECR
+        id: login-ecr # <-- This is the job ID `build`
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Build, tag, and push image to ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }} # <-- This takes from the outputs of login-ecr the variable registry
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          # Build the Docker image
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          # Push the image to Amazon ECR
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+      - name: Output Image URI for downstream jobs
+        id: image-details
+        run: echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" # <-- This export the variable build.outputs.image see at the start of the job
+
+    outputs:
+      image: ${{ steps.image-details.outputs.image }}
 
   deploy:
     needs: build
@@ -34,7 +70,56 @@ jobs:
       - name: Set image URI
         run: echo "IMAGE_URI=${{ needs.build.outputs.image }}" >> $GITHUB_ENV
 
-      - name: Deploy to EKS
-        uses: ./.github/workflows/deploy-steps.yml
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          image: ${{ needs.build.outputs.image }}
+          role-to-assume: arn:aws:iam::246386308913:role/eks-federated-deployer
+          role-session-name: eks-deployer-temporal-session
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Create kube-config directory
+        run: mkdir -p $HOME/.kube
+
+      - name: Decode and set kubeconfig
+        run: |
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 --decode > $HOME/.kube/config
+        shell: bash
+
+      - name: Install kubectl
+        run: |
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+          kubectl version
+
+      - name: Validate AWS Configuration
+        run: |
+          which aws
+          aws --version
+          aws sts get-caller-identity
+
+      - name: Create dev namespace if it doesn't exist
+        run: |
+          kubectl get namespace dev || kubectl create namespace dev
+
+      - name: Replace environment variables in Kubernetes manifest
+        run: |
+          export AWS_ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
+          export AWS_REGION=${{ secrets.AWS_REGION }}
+          export ECR_REPOSITORY=${{ secrets.ECR_REPOSITORY }}
+          export IMAGE_TAG=${{ github.event.inputs.image }}  
+          envsubst < k8s/deployment.yaml | tee k8s/deployment-resolved.yaml
+
+      - name: Check Installation
+        run: |
+          kubectl get pods -l app=marco-polo-app --namespace=dev
+          kubectl describe deployment marco-polo-deployment --namespace=dev
+
+      - name: Deploy to EKS
+        run: kubectl apply --validate=false -f k8s/deployment-resolved.yaml --namespace=dev
+
+      - name: Check Pod Status
+        run: |
+          echo "Waiting for pods to be in running state..."
+          kubectl get pods -l app=marco-polo-app --namespace=dev
+          kubectl wait --for=condition=Ready pod -l app=marco-polo-app --namespace=dev --timeout=120s
