--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set ENV Variables
-        run: echo "Setting ENV variables"
-        env:
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -24,7 +18,7 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::246386308913:role/eks-federated-deployer
           role-session-name: eks-deployer-temporal-session
-          aws-region: ${AWS_REGION}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Create ECR Repository if it doesn't exist
         run: |
