--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ jobs:
   build:
     permissions:
       id-token: write  # allows creation of an OIDC token
-      #contents: read
     runs-on: ubuntu-latest
 
     steps:
@@ -112,7 +111,7 @@ jobs:
       - name: Check Installation
         run: |
           kubectl get pods -l app=marco-polo-app
-          kubectl describe deployment marco-polo-deployment
+          kubectl describe deployment marco-polo
 
 #      - name: Check Pod Status
 #        run: |
