--- a/.github/workflows/stop-all-pods.yml
+++ b/.github/workflows/stop-all-pods.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::YOUR_ROLE
-          role-session-name: stop-pods-session
+          role-to-assume: arn:aws:iam::246386308913:role/eks-federated-deployer
+          role-session-name: eks-deployer-temporal-session
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Create kube-config directory
